--- a/src/app/players/player-list/player-list.component.html
+++ b/src/app/players/player-list/player-list.component.html
@@ -1,17 +1,25 @@
 <h2>Players</h2>
-<table>
-  <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Position</th>
-    <th>Height</th>
-    <th>Weight (lbs)</th>
-  </tr>
-  <tr *ngFor="let player of listOfPlayer">
-    <td>{{player.firstName}}</td>
-    <td>{{player.lastName}}</td>
-    <td>{{player.position}}</td>
-    <td>{{player.height}}</td>
-    <td>{{player.weight}}</td>
-  </tr>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Position</th>
+      <th>Height</th>
+      <th>Weight (lbs)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let player of listOfPlayer">
+      <td>{{player.firstName}}</td>
+      <td>{{player.lastName}}</td>
+      <td>{{player.position}}</td>
+      <td>{{player.height}}</td>
+      <td>{{player.weight}}</td>
+    </tr>
+  </tbody>
 </table>
+
+<p>
+  <a routerLink="/teams">Click here for teams</a>
+</p>
