--- a/src/app/teams/team-list/team-list.component.css
+++ b/src/app/teams/team-list/team-list.component.css
@@ -12,3 +12,16 @@
   background: #0069EE;
 }
 
+.table-striped tbody tr {
+  cursor: pointer;
+}
+
+.table-striped tbody tr:nth-of-type(odd) a {
+  color: #FFF;
+}
+
+.table-striped tbody tr:nth-of-type(even) a {
+  color: #006BB6;
+}
+
+
